gccida/g1/process_init_element
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_init_element/src/c-typeck.c:6991:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *inited; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_init_element/src/c-typeck.c:6996:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_init_element/src/c-typeck.c:6997:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_init_element/src/c-typeck.c:7006:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v19; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_init_element/src/c-typeck.c:7008:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_init_element/src/c-typeck.c:7009:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_init_element/src/c-typeck.c:7011:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *range_end; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_init_element/src/c-typeck.c:7012:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_init_element/src/c-typeck.c:7014:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *index; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_init_element/src/c-typeck.c:7015:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_init_element/src/c-typeck.c:7019:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v32; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_init_element/src/c-typeck.c:7033:7: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
if ( !constructor_stack_0->replacement_value ) 
      ^~~~~~~~~~~~~~~~~~~
      constructor_stack
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_init_element/src/c-typeck.c:7043:6: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
if ( constructor_stack_0->replacement_value ) 
     ^~~~~~~~~~~~~~~~~~~
     constructor_stack
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_init_element/src/c-typeck.c:7045:1: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
constructor_stack_0->replacement_value = value; 
^~~~~~~~~~~~~~~~~~~
constructor_stack
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_init_element/src/c-typeck.c:7049:6: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
v2 = constructor_stack_0; 
     ^~~~~~~~~~~~~~~~~~~
     constructor_stack
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_init_element/src/c-typeck.c:7050:7: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
if ( !constructor_stack_0->replacement_value ) 
      ^~~~~~~~~~~~~~~~~~~
      constructor_stack
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_init_element/src/c-typeck.c:7060:6: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
v2 = constructor_stack_0; 
     ^~~~~~~~~~~~~~~~~~~
     constructor_stack
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_init_element/src/c-typeck.c:7061:6: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
if ( constructor_stack_0->replacement_value ) 
     ^~~~~~~~~~~~~~~~~~~
     constructor_stack
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_init_element/src/c-typeck.c:7082:9: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
while ( constructor_stack_0->implicit ); 
        ^~~~~~~~~~~~~~~~~~~
        constructor_stack
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_init_element/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/process_init_element/src/obj/c-typeck.o] Error 1
